# qunox

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  QunoX.cpp  QunoX.h  main.cpp  resources.qrc
src/qml/: LogInPage.qml
utils/: generate-license.py
